Change tracing openapi + dto, generate golib
