# tools/openapi/schemas.yaml
@@ -164,22 +164,59 @@ sensor:
 
 trace:
   type: object
+  required:
+    - tracing_id
+    - device_id
+    - start_time
+    - steps
+    - status
+    - status_string
   properties:
     tracing_id:
       type: string
       example: "a59d28c8-2a0f-4e89-9f49-6942f1c04342"
     device_id:
-      type: int
+      type: integer
+      format: int64
       example: 37
+      description: id is 0 if not defined
     start_time:
-      type: int
-      example: 1692877920079
-    status:
       type: string
-      example: "success"
+      format: date-time
+    status:
+      type: integer
+      example: 2
+    status_string:
+      type: string
+      example: "succes"
     steps:
-      type: step[]
-      example: [{"status": "success", "duration": "5ms", "start_time": 1692877920079}]
+      type: array
+      items:
+        $ref: '#/trace_step'
+
+trace_step:
+  type: object
+  required:
+    - status
+    - status_string
+    - duration
+  properties:
+    start_time:
+      type: string
+      format: date-time
+    status:
+      type: integer
+      example: 2
+    status_string:
+      type: string
+      example: "succes"
+    duration:
+      type: number
+      format: float
+      description: Duration in seconds
+      example: 5.321
+    error:
+      type: string
 
 measurement:
   type: object
@@ -308,9 +345,7 @@ pipeline:
         - "MFMGroundwater@1.0.0"
     status:
       type: string
-      oneOf:
-        - active
-        - inactive
+      description: either active or inactive
       example: active
     last_status_change:
       type: string
